# ultimate_chain_generator

./: .gitignore  .gitmodules  .mise.toml  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
public/: CNAME
scripts/: gen-pyodide-wheels.mjs  gen_schema_fixture.py
src/: App.vue  branding.ts  main.ts  vite-env.d.ts
src/assets/css/: main.css
src/components/: AppContent.vue  BootProgress.vue  CodeEditor.vue  ParamForm.vue  PrintabilityPanel.vue  ShapePreview.vue  ShapeSelect.vue  Viewer.vue
src/composables/: useChainWorker.ts  useDesignWorker.ts  useMockChainWorker.ts  useMockDesignWorker.ts
src/designs/: manifest.ts
src/designs/blank/: design.py
src/designs/chain/: design.py
src/fixtures/: presets.json  schema.json
src/lib/: paramsUrl.ts  protocol.ts  resolveSchema.ts
src/python/: chain.py  fast_patch.py  helpers.py  install.py  measure.py  proto.py  runtime.py
src/types/: three-cad-viewer-css.d.ts  three-cad-viewer.d.ts
src/views/: Gallery.vue  Generator.vue
src/worker/: pyodide.worker.ts
stubs/: tcv-studio-composer.ts
